<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:padding="10dp">


<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.digitalworkshop.packdigitalbag.DigitalworkshopFragment">

    <TextView
        android:id="@+id/text_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/step_introduction"
        android:theme="@style/titleStyle"
        android:textAlignment="center"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/image_intro"
        android:layout_width="135dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/mascot_intro" />

    <TextView
        android:id="@+id/text_digitalbag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="8dp"
        android:text="@string/step_digitalbag"
        android:theme="@style/titleStyle"
        android:textAlignment="center"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/image_digitalbag"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="210dp"
        android:src="@drawable/mascot_with_bag" />

    <TextView
        android:id="@+id/text_ringlectures"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="210dp"
        android:text="@string/step_ring_lectures"
        android:theme="@style/titleStyle"
        android:textAlignment="center"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/image_ring_lectures"
        android:layout_width="110dp"
        android:layout_height="125dp"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="65dp"
        android:src="@drawable/mascot_show" />

    <ImageView
        android:id="@+id/image_lectures_video"
        android:layout_width="130dp"
        android:layout_height="65dp"
        android:layout_marginTop="265dp"
        android:layout_marginLeft="180dp"
        android:src="@drawable/video" />

    <TextView
        android:id="@+id/text_digitalwiki"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="355dp"
        android:text="@string/step_digitalwiki"
        android:theme="@style/titleStyle"
        android:textAlignment="center"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/image_digitalwiki"
        android:layout_width="130dp"
        android:layout_height="145dp"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="250dp"
        android:src="@drawable/mascot_digiwiki" />

    <TextView
        android:id="@+id/text_reenacht_ideas"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="400dp"
        android:text="@string/step_reenacht_ideas"
        android:theme="@style/titleStyle"
        android:textAlignment="center"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/image_reenacht_ideas"
        android:layout_width="145dp"
        android:layout_height="160dp"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="45dp"
        android:src="@drawable/mascot_gladly" />

    <TextView
        android:id="@+id/text_grumble"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="555dp"
        android:text="@string/step_grumble"
        android:theme="@style/titleStyle"
        android:textAlignment="center"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/image_grumble"
        android:layout_width="115dp"
        android:layout_height="130dp"
        android:layout_marginTop="580dp"
        android:layout_marginLeft="240dp"
        android:src="@drawable/mascot_grumble" />

    <ImageView
        android:id="@+id/image_click_on"
        android:layout_width="250dp"
        android:layout_height="175dp"
        android:layout_marginTop="640dp"
        android:layout_marginLeft="0dp"
        android:src="@drawable/mascot_instruction" />

</FrameLayout>

</ScrollView>